fix banner color in dark mode

--- a/src/components/banner/banner.module.scss
+++ b/src/components/banner/banner.module.scss
@@ -1,5 +1,6 @@
 .promo-banner {
   font-size: 15px;
+  color: #21201c;
   background: var(--accent-yellow);
   padding: 0.5rem 1rem;
   display: flex;
